# capella-dockerimages

./: .gitignore  .gitlab-ci.yml  .gitmodules  .hadolint.yaml  .pre-commit-config.yaml  404.html  Makefile  README.md  capella_loop.sh  index.html  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/actions/trivy/: action.yml
.github/workflows/: commits.yml  deploy-docker-images.yml  docs.yml  pre-commit.yml  projects.yml
backups/: Dockerfile  backup.py
base/: Dockerfile  index.html
base/hooks/: +pre-commit-and-lfs.sh  +pre-commit-only.sh  +pre-commit.sh
builder/: Dockerfile  build_capella_from_source.sh  inject_architecture_into_pom.py
buildpacks/: Makefile
buildpacks/builder/: Dockerfile  builder.toml  run.Dockerfile
buildpacks/buildpacks/capella/: autostart  buildpack.toml  download_archive.py  entrypoint.sh
buildpacks/buildpacks/capella-dropins/: buildpack.toml  install_dropins.py
buildpacks/buildpacks/jupyter/: buildpack.toml
buildpacks/buildpacks/pre-commit/: buildpack.toml
buildpacks/buildpacks/supervisord/: buildpack.toml
buildpacks/buildpacks/t4c/: buildpack.toml  entrypoint.sh
buildpacks/buildpacks/xidletime/: buildpack.toml
buildpacks/buildpacks/xpra/: buildpack.toml  nginx.conf
buildpacks/buildpacks/xrdp/: buildpack.toml  menu.xml
buildpacks/extensions/base/: extension.toml
buildpacks/extensions/capella-deps/: extension.toml
buildpacks/extensions/xidletime-deps/: extension.toml
buildpacks/extensions/xpra-deps/: extension.toml
buildpacks/extensions/xrdp-deps/: extension.toml
capella/: .dockerignore.template  .trivyignore  Dockerfile  autostart  download_archive.py  entrypoint.sh  install_dropins.py  patch.sh  replace_env_variables.sh  setup_workspace.py  startup.sh
capella/archives/: capella.tar.gz.license
capella/base/: index.html
capella/build-from-source/: index.html
capella/cli/: index.html
capella/introduction/: index.html
capella/provisioning/: index.html
capella/readonly/: index.html
capella/setup/: README.md  disable_semantic_browser_auto_refresh.py  provisioning.py  replace_env_variables.sh  set_autostart.sh  setup_workspace.py
capella/startup/: setup_workspace.py
capella/t4c/base/: index.html
capella/t4c/exporter/: index.html
capella/t4c/importer/: index.html
capella/t4c/introduction/: index.html
capella/versions/5.0.0/: dropins.yml
capella/versions/5.2.0/: dropins.yml
capella/versions/6.0.0/: dropins.yml
capella/versions/6.1.0/: dropins.yml
capella/versions/7.0.0/: dropins.yml
capella_broken_desc_editor/: .gitignore  .oh-my-zsh.tar.bz2  .p10k.zsh  .zshrc  Dockerfile  docker-compose.yml  fonts.tar.bz2  nvim-config.tar.bz2  requirements.txt
ci-templates/: README.md  index.html
ci-templates/github/diagram-cache/: action.yml  index.html
ci-templates/github/model-validation/: action.yml
ci-templates/gitlab/: README.md  cleanup.yml  diagram-cache.yml  exporter.yaml  exporter.yml  filtering.yml  image-builder.yml  model-validation.yml  release-train.yml
ci-templates/gitlab/cleanup/: index.html
ci-templates/gitlab/diagram-cache/: index.html
ci-templates/gitlab/image-builder/: index.html
ci-templates/gitlab/model-validation/: index.html
ci-templates/gitlab/release-train/: index.html
ci-templates/gitlab/t4c-export/: index.html
cli/: .gitignore  Dockerfile  pyproject.toml  startup.sh
cli/cdi/: __init__.py  __main__.py  args.py  docker.py  formatting.py  git.py  helpers.py  logging.py  validators.py
cli/cdi/base/: args.py  build.py
cli/cdi/capella/: args.py  build.py  run.py
cli/cdi/eclipse/: args.py  build.py  run.py
cli/cdi/jupyter/: args.py  build.py  run.py
cli/cdi/papyrus/: args.py  build.py  run.py
cli/cdi/pure_variants/: args.py  build.py  run.py
cli/cdi/run/: __init__.py
cli/cdi/scan/: __init__.py
cli/cdi/syncer/: args.py  run.py
development/testing/: index.html
docs/: copyright_hook.py  mkdocs.yml
docs/docs/: base.md  ease.md  index.md  migration.md  pure-variants.md  remote.md
docs/docs/capella/: base.md  build-from-source.md  cli.md  introduction.md  provisioning.md  pure-variants.md  readonly.md
docs/docs/ci-templates/: index.md
docs/docs/development/: buildpacks.md  testing.md
ease/: Dockerfile  git_askpass.py  index.html  startup.sh
ease/debug/: Dockerfile
eclipse/: Dockerfile  autostart  set_memory_flags.py
eclipse/base/: index.html
eclipse/memory-options/: index.html
exporter/: Dockerfile  exporter.py
git-hooks/git-hooks/: index.html
importer/: Dockerfile  backup.sh  importer.sh  startup.sh
jupyter/: Dockerfile  docker-entrypoint.sh  index.html  jupyter_metrics.py  requirements_template.txt  supervisord.conf
jupyter-notebook/: Dockerfile  docker-entrypoint.sh  jupyter_lab_config.py  jupyter_metrics.py  requirements_template.txt  supervisord.conf
local-git-server/: lighttpd.conf
monitoring/: Dockerfile
papyrus/: Dockerfile  autostart
papyrus/base/: index.html
pure-variant/: Dockerfile  startup.sh
pure-variants/: Dockerfile  index.html  setup_workspace_purevariants.py
readonly/: Dockerfile  load_models.py  prepare_workspace.py  prepare_workspace.sh  startup.sh
remote/: Dockerfile  autostart  bg-saved.cfg  client-inject.js  error.html  index.html  menu.xml  metrics.py  nginx.conf  openbox-launcher.sh  rc.xml  setup_workspace.py  startup.sh  supervisord.conf  supervisord.xpra.conf  supervisord.xrdp.conf
remote/fastapi/: .dockerignore  .gitignore  README.rst  pyproject.toml  setup.cfg
remote/tests/: test_metrics.py
search/: search_index.json
t4c/: .dockerignore.template  Dockerfile  backup.py  docker_entrypoint.sh  export.py  patch_t4c.sh  pyproject.toml  setup_workspace.py  setup_workspace_t4c.py
t4c/t4c_cli/: backup.py  export.py
t4c/t4c_cli/util/: capella.py  config.py  datetime.py  git.py  log.py  t4c.py  util.py
tests/: conftest.py  test_backups.py  test_exporter_git.py  test_exporter_local.py  test_read_only.py  test_repositories_seeding.py  test_t4c_repository_injection.py
tests/data/: model-changes.yaml
tests/local-git-server/: Dockerfile  lighttpd.conf
(+65 files in other folders)
